crates/backyard-parser/tests/snapshots/variable__basic.snap
---
source: crates/backyard-parser/tests/variable.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: variable
    name:
      node_type: identifier
      name: ""
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 0
        offset: 0
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 1
    offset: 1
leadings: ~
trailings: ~
