crates/backyard-parser/tests/snapshots/variable__bracket.snap
---
source: crates/backyard-parser/tests/variable.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: variable
        name:
          node_type: identifier
          name:
            - 97
          loc:
            start:
              line: 1
              column: 2
              offset: 2
            end:
              line: 1
              column: 3
              offset: 3
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 2
            offset: 2
          end:
            line: 1
            column: 3
            offset: 3
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 6
          offset: 6
      leadings: ~
      trailings: ~
    operator: Default
    right:
      node_type: number
      value:
        - 52
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 1
          column: 8
          offset: 8
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 6
        offset: 6
      end:
        line: 1
        column: 8
        offset: 8
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 9
    offset: 9
leadings: ~
trailings: ~
