crates/backyard-parser/tests/snapshots/variable__multiple.snap
---
source: crates/backyard-parser/tests/variable.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 1
            offset: 1
          end:
            line: 1
            column: 2
            offset: 2
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 1
          offset: 1
        end:
          line: 1
          column: 2
          offset: 2
      leadings: []
      trailings: []
    operator: "="
    right:
      node_type: number
      value: "4"
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 6
          offset: 6
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 4
        offset: 4
      end:
        line: 1
        column: 6
        offset: 6
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 7
    offset: 7
leadings: []
trailings: []
